@@ -37,6 +37,8 @@
 namespace fastonosql {
 namespace core {
 
+common::Error ParseCommands(const std::string& cmd, std::vector<std::string>* cmds);
+
 class ICommandTranslator {
  public:
   ICommandTranslator(const std::vector<CommandHolder>& commands);
@@ -63,11 +65,17 @@ class ICommandTranslator {
 
   common::Error FindCommand(int argc,
                             const char** argv,
-                            const CommandInfo** info) const WARN_UNUSED_RESULT;
-  common::Error TestCommandLine(int argc,
-                                const char** argv,
-                                const CommandInfo** info,
-                                size_t* off) const WARN_UNUSED_RESULT;
+                            const CommandHolder** info,
+                            size_t* off) const WARN_UNUSED_RESULT;
+  common::Error TestCommandArgs(const CommandHolder* cmd,
+                                int argc_to_call,
+                                const char** argv_to_call) const WARN_UNUSED_RESULT;
+
+  common::Error TestCommandLine(const std::string& cmd) const WARN_UNUSED_RESULT;
+  common::Error TestCommandLineArgs(int argc,
+                                    const char** argv,
+                                    const CommandHolder** info,
+                                    size_t* off) const WARN_UNUSED_RESULT;
 
   static common::Error InvalidInputArguments(const std::string& cmd);
   static common::Error NotSupported(const std::string& cmd);
