@@ -1,6 +1,7 @@
 1.3.0 /
 [Alexandr Topilski]
 - Ui bug fixes
+- Validate input
 - [Redis] LPUSH UI handling
 - [Redis] SADD UI handling
 - [Redis] ZADD UI handling
